Complete Charl v0.1.0 - Revolutionary Neuro-Symbolic AI Language
This is a major milestone completing Phases 1-18 of the Charl language,
implementing a full-stack neuro-symbolic AI programming language with
state-of-the-art features.

🎯 Major Features Implemented:

Phase 1-6: Core Language & Neural Networks
- Complete lexer, parser, and interpreter
- Hindley-Milner type inference system
- Automatic differentiation (autograd) engine
- Neural network layers: Dense, Conv2D, RNN, LSTM, Transformer
- Optimizers: SGD, Adam, AdamW with gradient clipping

Phase 7-10: Advanced Performance
- LLVM backend for AOT compilation (optional feature)
- GPU acceleration via WGPU (cross-platform compute)
- Quantization support (INT8, INT4) with calibration
- Kernel fusion optimizer for automatic graph optimization

Phase 11-13: Advanced Architectures
- Full attention mechanism suite (Multi-head, Self, Causal, Sparse)
- Positional encoding and layer normalization
- Advanced optimizers with learning rate schedules

Phase 14: Neuro-Symbolic AI
- Knowledge graph triple store with GNN support
- First-order logic (FOL) solver with unification
- Differentiable fuzzy logic with gradient support
- Symbolic reasoning engine with architectural rules
- Concept learning with generalization/specialization

Phase 15: Meta-Learning
- MAML (Model-Agnostic Meta-Learning)
- Prototypical networks for few-shot learning
- Curriculum learning with automatic difficulty progression

Phase 16: Efficient Architectures
- S4 (Structured State Space) models
- Mamba selective SSM (O(n) vs O(n²) transformers)
- Linear attention mechanisms
- Mixture of Experts (MoE) implementation

Phase 17: Reasoning Systems
- Chain-of-Thought reasoning with self-consistency
- Least-to-Most problem decomposition
- Working memory (Baddeley's model: short + long term)
- Tree-of-Thoughts multi-path deliberate search
- Causal reasoning (Pearl's hierarchy: interventions, counterfactuals)
- Self-verification with logical consistency checki

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Rust
 /target/
 **/*.rs.bk
+*.pdb
+
+# Cargo
 Cargo.lock
 
 # IDE
@@ -13,34 +16,19 @@ Cargo.lock
 # OS
 .DS_Store
 Thumbs.db
-*.tmp
 
 # Build artifacts
-*.exe
-*.dll
+*.o
+*.a
 *.so
 *.dylib
-*.a
-*.lib
 
-# Test artifacts
-/tmp/
-/test_output/
+# Generated files
+*.json
+!package.json
+benchmark_output.txt
+benchmark_run.txt
 
-# Benchmarks
-/benches/target/
-
-# Documentation builds
-/target/doc/
-
-# Backup files
-*.bak
-*.backup
-
-# Environment
-.env
-.env.local
-
-# Debug
-*.pdb
-*.dSYM/
+# Temporary files
+*.tmp
+*.log
