Implement charl build command - Standalone Executable Generation
Added full `charl build` functionality to compile Charl scripts into standalone executables.

Features:
- charl build script.charl: Generate standalone executable
- charl build script.charl --release: Optimized release build
- charl build script.charl -o output: Custom output path
- Validates source code before building
- Shows build progress and final executable size
- Cross-platform support (Linux, macOS, Windows)

Technical Implementation:
- Creates temporary build directory
- Generates Rust wrapper that embeds Charl source code
- Compiles wrapper with cargo (includes Charl interpreter)
- Copies final binary to desired location
- Automatic cleanup of temporary files
- Uses full cargo path for reliability

Example Usage:
$ charl build examples/hello.charl --release
🔨 Building Charl executable: examples/hello.charl
📦 Output: examples/hello
🔧 Creating standalone executable...
⚙️  Compiling with cargo...
✅ Build successful!
📦 Executable: examples/hello
📊 Size: 512 KB

$ ./examples/hello
(executes successfully)

Status:
✅ charl run - Fully functional
✅ charl repl - Fully functional
✅ charl build - Fully functional
✅ All 3 core CLI commands working!

Notes:
- Generated executables are standalone (no Charl installation needed)
- Includes full Charl interpreter + source code
- Release builds use LTO and aggressive optimizations
- Typical size: 500-800 KB per executable

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ benchmark_run.txt
 # Temporary files
 *.tmp
 *.log
+
+# Generated executables from charl build
+examples/hello
+examples/math
+examples/function
+examples/arrays
