Prepare repository for open source contributions
Establish contribution framework following Python's model to enable community
contributions while maintaining quality and legal clarity. Add CLA, code of
conduct, and contribution guidelines. Remove internal development documentation
to keep the public repository focused on essential project information.

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,19 @@ examples/hello
 examples/math
 examples/function
 examples/arrays
+
+# Internal development documentation
+# Keep only: README.md, CONTRIBUTING.md, CODE_OF_CONDUCT.md, CONTRIBUTORS.md, CLA.md
+FASE_*.md
+PHASE*.md
+SESSION_*.md
+ROADMAP*.md
+*_REPORT.md
+*_STATUS.md
+*_COMPLETE.md
+*_GUIDE.md
+context.md
+meta.md
+teoria.md
+docs/SPECIFICATION.md
+examples/README.md
