--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ license = "MIT"
 name = "charl"
 path = "src/main.rs"
 
+# Benchmark: MNIST training comparison with PyTorch
+[[bin]]
+name = "charl_mnist_bench"
+path = "benchmarks/pytorch_comparison/mnist/charl_mnist.rs"
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -26,6 +31,7 @@ futures-intrusive = "0.5"  # Async primitives for wgpu
 # Nota: Si hay problemas de compilación con Polly, usar llvm-sys directamente
 # o implementar un backend más simple sin JIT
 inkwell = { version = "0.4", features = ["llvm15-0"], optional = true }
+rand = "0.9.2"
 
 [features]
 default = []
