chore: Remove internal docs from repo, keep locally
Remove internal development documentation from repository tracking
while keeping files locally for reference.

## Changes

Removed from repo (but kept locally):
- LLVM_BACKEND_PLAN.md
- PROGRESS_SESSION_12.md
- benchmarks/BENCHMARK_RESULTS.md
- benchmarks/PROGRESS_SESSION_1.md

Added to repo:
- ROADMAP.md: Public project roadmap (2026-2027)
- .gitignore: Updated to exclude internal docs
- docs/SPECIFICATION.md: Language specification
- examples/README.md: Examples documentation

## .gitignore Updates

Configured to:
- Ignore internal development files (FASE_*, PHASE*, SESSION_*, etc.)
- Allow essential public docs (ROADMAP.md, INSTALL_WINDOWS.md, etc.)
- Keep session files locally but not in repo

The repository is now clean with only essential public documentation.

--- a/.gitignore
+++ b/.gitignore
@@ -48,11 +48,11 @@ examples/function
 examples/arrays
 
 # Internal development documentation
-# Keep only: README.md, CONTRIBUTING.md, CODE_OF_CONDUCT.md, CONTRIBUTORS.md, CLA.md
+# Keep only: README.md, CONTRIBUTING.md, CODE_OF_CONDUCT.md, CONTRIBUTORS.md, CLA.md, ROADMAP.md, INSTALL_WINDOWS.md, VSCODE_INTEGRATION.md
 FASE_*.md
 PHASE*.md
 SESSION_*.md
-ROADMAP*.md
+ROADMAP_*.md
 *_REPORT.md
 *_STATUS.md
 *_COMPLETE.md
@@ -60,5 +60,17 @@ ROADMAP*.md
 context.md
 meta.md
 teoria.md
-docs/SPECIFICATION.md
-examples/README.md
+
+# Allow these essential docs
+!ROADMAP.md
+!INSTALL_WINDOWS.md
+!VSCODE_INTEGRATION.md
+!docs/SPECIFICATION.md
+!examples/README.md
+!vscode-charl/README.md
+
+# Session and progress files (keep locally but not in repo)
+LLVM_BACKEND_PLAN.md
+PROGRESS_SESSION_*.md
+benchmarks/BENCHMARK_RESULTS.md
+benchmarks/PROGRESS_SESSION_*.md
