feat: Complete autograd integration for neural network training
Major enhancements to training capabilities:

Core Improvements:
- Integrated autograd system with all NN operations (linear, relu, sigmoid)
- Fixed loss functions to return tensors for backpropagation
- Implemented proper gradient flow through computation graph
- Enhanced SGD optimizer to preserve tensor references across iterations

New Features:
- tensor_item(): Extract scalar values from single-element tensors
- Autograd-aware NN builtins with dual-path execution (fast inference / training)
- Public autograd functions: linear(), relu(), sigmoid(), mse_loss()
- Full gradient tracking and backward pass support

API Enhancements:
- tensor_with_grad(): Create tensors with gradient tracking
- tensor_backward(): Run backpropagation on computation graph
- tensor_grad(): Retrieve computed gradients
- sgd_step(): Update parameters using computed gradients

Performance:
- Zero overhead for inference (fast path when requires_grad=false)
- Efficient gradient computation for training
- Dynamic computation graph with proper memory management

Examples Added:
- Training examples with various optimizers
- Scientific test suite for validation
- ResNet and Transformer building blocks

Verified:
- XOR problem convergence (loss: 0.259 → 0.006 in 2000 epochs)
- Gradient computation correctness
- Parameter update mechanics
- Training loop stability

This release enables full neural network training with automatic differentiation,
making Charl suitable for serious machine learning research and development.

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,19 @@ PROGRESS_SESSION_*.md
 benchmarks/BENCHMARK_RESULTS.md
 benchmarks/PROGRESS_SESSION_*.md
 
+# Training and analysis reports (internal)
+TRAINING_SUCCESS_REPORT.md
+TRAINING_FINAL_REPORT.md
+MEJORAS_PARA_CIENTIFICOS.md
+BACKEND_EXPOSURE_AUDIT.md
+WEEKS_1-15_COMPLETION_STATUS.md
+BACKEND_EXPOSURE_STATUS.md
+BACKEND_COMPLETION_SUMMARY.md
+
+# Test files (development only)
+test_*.ch
+*_debug.ch
+
 # Release binaries (upload to GitHub Releases instead)
 releases/*.tar.gz
 releases/*.zip
