--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ benchmark_run.txt
 # Temporary files
 *.tmp
 *.log
+*.txt
+!LICENSE.txt
+!requirements.txt
 
 # Generated executables from charl build
 examples/hello
@@ -95,6 +98,7 @@ AGI_JOURNEY.md
 AGI_STATS.md
 README_AGI.md
 RELEASE_NOTES_*.md
+RELEASE_*.md
 CHARL_TECHNICAL_ANALYSIS_*.md
 *_ANALYSIS.md
 *_ROADMAP.md
@@ -115,8 +119,8 @@ AGI_PROJECT_II/
 # Test files (development only - but allow AGI-TEST-PROJECT tests)
 test_*.ch
 *_debug.ch
+benchmark_*.ch
 !AGI-TEST-PROJECT/test_*.ch
 
 # Release binaries (upload to GitHub Releases instead)
-releases/*.tar.gz
-releases/*.zip
+releases/
