feat: Add tensor element access functions and advanced builtins
Major enhancements to tensor operations and new builtin modules:

Tensor Operations:
- Add tensor_get(tensor, [indices]) - Access individual tensor elements
- Add tensor_set(tensor, [indices], value) - Modify tensor elements in-place
- Support for multi-dimensional indexing with bounds checking
- Row-major order indexing for consistency

New Builtin Modules:
- advanced_builtins.rs - Advanced mathematical operations
- kg_gnn_builtins.rs - Knowledge graph and GNN operations
- symbolic_builtins.rs - Symbolic computation support

Core Improvements:
- Enhanced AST nodes for advanced operations
- Improved type inference for symbolic types
- Extended lexer with new tokens for symbolic operations
- Parser support for advanced mathematical expressions
- Autograd improvements for new operations

These additions significantly expand Charl's capabilities for:
- Neural network implementations (better tensor manipulation)
- Graph neural networks and knowledge graphs
- Symbolic mathematics and formal reasoning
- Advanced machine learning applications

All new functions include proper error handling, validation,
and are fully integrated with Charl's autograd system.

--- a/.gitignore
+++ b/.gitignore
@@ -113,8 +113,9 @@ karapathy.md
 !AGI-TEST-PROJECT/AGI_STATS.md
 !AGI-TEST-PROJECT/README_AGI.md
 
-# AGI Project II (internal development, not for public repo)
+# AGI Projects (internal development, not for public repo)
 AGI_PROJECT_II/
+AGI_PROJECT_III/
 
 # Test files (development only - but allow AGI-TEST-PROJECT tests)
 test_*.ch
